on style css deleted padding left 0,absolete to fixed, align items and re typed. Plus added justify content to space evenly and changed align items a couple time and re typed to align items baseline but still has line under semi colon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,13 +62,15 @@ header {
 
 /* Navbar styles with dropdown toggle */
 nav {
-    position: absolute;
+    position: fixed;
+    z-index: 99;
     background-color: #ffffff;
     width: 100%;
-    left: 0;
-    padding: 0 1rem;
+    padding-left:  1rem;
     box-shadow: 0 2px 2px #3a3a3a;
-    display: none;
+    display: flex;
+    justify-content: space-evenly
+    align-items: baseline;
     top: 100%;
 }
 
